# hapod

./: .buildinfo  .gitignore  .style.yapf  LICENSE  README.md  code_reviewer.sh  genindex.html  hapod.html  index.html  modules.html  objects.inv  py-modindex.html  pylintrc  pyproject.toml  run_tests.sh  search.html  searchindex.js
.doctrees/: environment.pickle  hapod.doctree  index.doctree  modules.doctree
.github/workflows/: python-package.yml  sphinx-gh-pages.yml
_sources/: index.rst.txt
docs/source/: conf.py  hapod.rst  index.rst  modules.rst
hapod/: __init__.py  core.py  hapod.py  memory.py  serializer.py  utils.py
src/hapod/: __init__.py  hapod.py
tests/: test_base.py  test_hapod.py  test_helpers.py  test_memory.py  test_piecewise_pod.py  test_pod.py  test_randomized_pod.py  test_serializer.py  test_svd.py  test_utils.py
tutorials/: Untitled-1.ipynb  test_hapod.ipynb  test_randomized_pod.ipynb  tutorial_1.ipynb  tutorial_1.py  tutorial_2.ipynb  tutorial_2.py
